tests/rosetta/transpiler/Zig/call-a-foreign-language-function.error
zig build: exit status 1
/tmp/call-a-foreign-language-function.zig:5:67: error: use of undeclared identifier 'handleError'
