tests/rosetta/transpiler/Zig/call-a-foreign-language-function.zig
// Generated by Mochi compiler v0.10.28 on 2025-07-18T10:01:20Z
const std = @import("std");

fn _concat_string(a: []const u8, b: []const u8) []const u8 {
    return std.mem.concat(u8, &[_][]const u8{ a, b }) catch |err| handleError(err);
}

fn strdup(s: []const u8) []const u8 {
    return _concat_string(s, "");
}

fn user_main() void {
    const go1 = "hello C"; // []const u8
    const c2 = strdup(go1); // []const u8
    std.debug.print("{s}\n", .{c2});
}

pub fn main() void {
    user_main();
}
